added some note

--- a/Tas-workspace/notebooks/data_analysis1.ipynb
+++ b/Tas-workspace/notebooks/data_analysis1.ipynb
@@ -9,6 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b5222241",
+   "metadata": {},
+   "source": [
+    "Data used in this notebook (onedrive link to each files):\n",
+    "\n",
+    "1. Curated Population data: https://unimelbcloud-my.sharepoint.com/:u:/r/personal/eamanda_student_unimelb_edu_au/Documents/Applied%20Data%20Science%20Datasets/landing/raw/cleaned/curated/pop_growth/population_data_w_components/population_data.gpkg?csf=1&web=1&e=L8UFFB\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2d2b6043",
