--- a/Tas-workspace/notebooks/data_preprocessing1.ipynb
+++ b/Tas-workspace/notebooks/data_preprocessing1.ipynb
@@ -9,6 +9,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e015d7ac",
+   "metadata": {},
+   "source": [
+    "Data used in this notebook (onedrive link to each files):\n",
+    "\n",
+    "1. Historical landing data: https://unimelbcloud-my.sharepoint.com/:u:/r/personal/eamanda_student_unimelb_edu_au/Documents/Applied%20Data%20Science%20Datasets/landing/2.%20population_data/historical/32180_ERP_2024_SA2_GDA2020.gpkg?csf=1&web=1&e=3tNQhM\n",
+    "\n",
+    "2. Projected landing data: https://unimelbcloud-my.sharepoint.com/:x:/r/personal/eamanda_student_unimelb_edu_au/Documents/Applied%20Data%20Science%20Datasets/landing/2.%20population_data/projected/VIF2023_SA2_Pop_Hhold_Dwelling_Projections_to_2036_Release_2.xlsx?d=wa3edcad4574746ccb824e684d56563c6&csf=1&web=1&e=SP6uKV\n",
+    "\n",
+    "3. Median Rental Data : https://unimelbcloud-my.sharepoint.com/:x:/r/personal/eamanda_student_unimelb_edu_au/Documents/Applied%20Data%20Science%20Datasets/landing/2.%20population_data/Moving%20annual%20median%20rent%20by%20suburb%20and%20town%20-%20March%20quarter%202025%20(2).xlsx?d=wd709b2b59a614a658ab64bf06556fa06&csf=1&web=1&e=bMJyI3\n",
+    "\n",
+    "4. Mapping data : https://unimelbcloud-my.sharepoint.com/:x:/r/personal/eamanda_student_unimelb_edu_au/Documents/Applied%20Data%20Science%20Datasets/landing/raw/cleaned/6.%20excel%20to%20sa2/mapped_target_suburbs.csv?d=wbbfd7a3ad1e74d838b72c2bb0adb237f&csf=1&web=1&e=rSBLxV\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 670,
    "id": "010f5ce3",
