--- a/Amanda-workspace/income.ipynb
+++ b/Amanda-workspace/income.ipynb
@@ -1974,10 +1974,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ddeccf05",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                SA2 NAME  2021-22.med  med_CAGR  Predicted_Income_2030_CAGR\n",
+      "0                    NaN      54708.0  3.867891                74114.188680\n",
+      "1              Alfredton      58316.0  3.842954                78850.415741\n",
+      "2               Ballarat      55618.0  3.251057                71840.842864\n",
+      "3              Buninyong      55278.0  3.345123                71923.733205\n",
+      "4              Delacombe      53390.0  4.022798                73196.139150\n",
+      "..                   ...          ...       ...                         ...\n",
+      "518                Otway      40989.0  7.525921                73244.106113\n",
+      "519         Moyne - East      49857.0  5.162848                74580.422926\n",
+      "520         Moyne - West      51579.0  5.846443                81261.167452\n",
+      "521  Warrnambool - North      51796.0  4.198511                71976.103050\n",
+      "522  Warrnambool - South      52467.0  4.913053                77005.623427\n",
+      "\n",
+      "[523 rows x 4 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "#Using CAGR\n",
     "latest_year_col = med_cols[-1]  \n",
@@ -1994,7 +2015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c1251545",
    "metadata": {},
    "outputs": [],
@@ -2068,8 +2089,8 @@
        "      <th>2018-19.med</th>\n",
        "      <th>2019-20.med</th>\n",
        "      <th>...</th>\n",
-       "      <th>Predicted_Income_2029</th>\n",
-       "      <th>Predicted_Income_2030</th>\n",
+       "      <th>mean_CAGR</th>\n",
+       "      <th>Predicted_Income_2030_CAGR</th>\n",
        "      <th>Predicted_Income_2023</th>\n",
        "      <th>Predicted_Income_2024</th>\n",
        "      <th>Predicted_Income_2025</th>\n",
@@ -2094,8 +2115,8 @@
        "      <td>48801.0</td>\n",
        "      <td>49848.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>67459.9</td>\n",
-       "      <td>69342.6</td>\n",
+       "      <td>4.184922</td>\n",
+       "      <td>74114.188680</td>\n",
        "      <td>56163.7</td>\n",
        "      <td>58046.4</td>\n",
        "      <td>59929.1</td>\n",
@@ -2118,8 +2139,8 @@
        "      <td>51620.0</td>\n",
        "      <td>52777.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>71860.7</td>\n",
-       "      <td>73881.6</td>\n",
+       "      <td>3.826149</td>\n",
+       "      <td>78850.415741</td>\n",
        "      <td>59735.3</td>\n",
        "      <td>61756.2</td>\n",
        "      <td>63777.1</td>\n",
@@ -2142,8 +2163,8 @@
        "      <td>51187.0</td>\n",
        "      <td>50968.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>65854.7</td>\n",
-       "      <td>67395.4</td>\n",
+       "      <td>3.651443</td>\n",
+       "      <td>71840.842864</td>\n",
        "      <td>56610.5</td>\n",
        "      <td>58151.2</td>\n",
        "      <td>59691.9</td>\n",
@@ -2166,8 +2187,8 @@
        "      <td>49846.0</td>\n",
        "      <td>51572.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>67795.5</td>\n",
-       "      <td>69570.2</td>\n",
+       "      <td>3.668774</td>\n",
+       "      <td>71923.733205</td>\n",
        "      <td>57147.3</td>\n",
        "      <td>58922.0</td>\n",
        "      <td>60696.7</td>\n",
@@ -2190,8 +2211,8 @@
        "      <td>47940.0</td>\n",
        "      <td>49810.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>66372.3</td>\n",
-       "      <td>68240.8</td>\n",
+       "      <td>4.510491</td>\n",
+       "      <td>73196.139150</td>\n",
        "      <td>55161.3</td>\n",
        "      <td>57029.8</td>\n",
        "      <td>58898.3</td>\n",
@@ -2238,8 +2259,8 @@
        "      <td>32420.0</td>\n",
        "      <td>33597.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>59617.1</td>\n",
-       "      <td>62319.8</td>\n",
+       "      <td>6.592220</td>\n",
+       "      <td>73244.106113</td>\n",
        "      <td>43400.9</td>\n",
        "      <td>46103.6</td>\n",
        "      <td>48806.3</td>\n",
@@ -2262,8 +2283,8 @@
        "      <td>43158.0</td>\n",
        "      <td>43759.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>65238.8</td>\n",
-       "      <td>67487.6</td>\n",
+       "      <td>6.155396</td>\n",
+       "      <td>74580.422926</td>\n",
        "      <td>51746.0</td>\n",
        "      <td>53994.8</td>\n",
        "      <td>56243.6</td>\n",
@@ -2286,8 +2307,8 @@
        "      <td>43243.0</td>\n",
        "      <td>44966.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>69607.7</td>\n",
-       "      <td>72242.0</td>\n",
+       "      <td>6.666465</td>\n",
+       "      <td>81261.167452</td>\n",
        "      <td>53801.9</td>\n",
        "      <td>56436.2</td>\n",
        "      <td>59070.5</td>\n",
@@ -2310,8 +2331,8 @@
        "      <td>45632.0</td>\n",
        "      <td>47821.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>66086.3</td>\n",
-       "      <td>68110.4</td>\n",
+       "      <td>2.003123</td>\n",
+       "      <td>71976.103050</td>\n",
        "      <td>53941.7</td>\n",
        "      <td>55965.8</td>\n",
        "      <td>57989.9</td>\n",
@@ -2334,8 +2355,8 @@
        "      <td>44841.0</td>\n",
        "      <td>46303.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>68481.2</td>\n",
-       "      <td>70826.0</td>\n",
+       "      <td>4.440647</td>\n",
+       "      <td>77005.623427</td>\n",
        "      <td>54412.4</td>\n",
        "      <td>56757.2</td>\n",
        "      <td>59102.0</td>\n",
@@ -2347,7 +2368,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>523 rows × 35 columns</p>\n",
+       "<p>523 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2377,18 +2398,18 @@
        "521  8.545918e+08  9.159373e+08      43939.0      45632.0      47821.0  ...   \n",
        "522  5.323953e+08  5.534937e+08      43308.0      44841.0      46303.0  ...   \n",
        "\n",
-       "     Predicted_Income_2029  Predicted_Income_2030  Predicted_Income_2023  \\\n",
-       "0                  67459.9                69342.6                56163.7   \n",
-       "1                  71860.7                73881.6                59735.3   \n",
-       "2                  65854.7                67395.4                56610.5   \n",
-       "3                  67795.5                69570.2                57147.3   \n",
-       "4                  66372.3                68240.8                55161.3   \n",
-       "..                     ...                    ...                    ...   \n",
-       "518                59617.1                62319.8                43400.9   \n",
-       "519                65238.8                67487.6                51746.0   \n",
-       "520                69607.7                72242.0                53801.9   \n",
-       "521                66086.3                68110.4                53941.7   \n",
-       "522                68481.2                70826.0                54412.4   \n",
+       "     mean_CAGR  Predicted_Income_2030_CAGR  Predicted_Income_2023  \\\n",
+       "0     4.184922                74114.188680                56163.7   \n",
+       "1     3.826149                78850.415741                59735.3   \n",
+       "2     3.651443                71840.842864                56610.5   \n",
+       "3     3.668774                71923.733205                57147.3   \n",
+       "4     4.510491                73196.139150                55161.3   \n",
+       "..         ...                         ...                    ...   \n",
+       "518   6.592220                73244.106113                43400.9   \n",
+       "519   6.155396                74580.422926                51746.0   \n",
+       "520   6.666465                81261.167452                53801.9   \n",
+       "521   2.003123                71976.103050                53941.7   \n",
+       "522   4.440647                77005.623427                54412.4   \n",
        "\n",
        "     Predicted_Income_2024  Predicted_Income_2025  Predicted_Income_2026  \\\n",
        "0                  58046.4                59929.1                61811.8   \n",
@@ -2429,7 +2450,7 @@
        "521                68110.4  \n",
        "522                70826.0  \n",
        "\n",
-       "[523 rows x 35 columns]"
+       "[523 rows x 28 columns]"
       ]
      },
      "execution_count": 13,
