--- a/Amanda-workspace/Min_dist.ipynb
+++ b/Amanda-workspace/Min_dist.ipynb
@@ -321,8 +321,6 @@
     "foi_gdf = foi_gdf.to_crs(epsg=4326)\n",
     "\n",
     "# Extract lon/lat\n",
-    "domain_gdf[\"lon\"] = domain_gdf.geometry.x\n",
-    "domain_gdf[\"lat\"] = domain_gdf.geometry.y\n",
     "foi_gdf[\"lon\"] = foi_gdf.geometry.x\n",
     "foi_gdf[\"lat\"] = foi_gdf.geometry.y\n",
     "\n",
@@ -360,6 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "# Ensure foi_gdf has lon/lat columns\n",
     "foi_gdf[\"lon\"] = foi_gdf.geometry.x\n",
     "foi_gdf[\"lat\"] = foi_gdf.geometry.y\n",
@@ -375,7 +374,8 @@
     "    \n",
     "    print(f\"Processing {cat}...\")\n",
     "    distances = nearest_poi_batch(domain_points, foi_points_cat, max_dest=50)\n",
-    "    domain_gdf[f\"nearest_{cat}_dist_m\"] = distances\n"
+    "    domain_gdf[f\"nearest_{cat}_dist_m\"] = distances\n",
+    "\"\"\"\n"
    ]
   }
  ],
