--- a/Amanda-workspace/income_cleaning.ipynb
+++ b/Amanda-workspace/income_cleaning.ipynb
@@ -2464,13 +2464,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fadc8aed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'vic_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Save to CSV if needed\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mvic_df\u001b[49m\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpredicted_income_till_2030.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'vic_df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Save to CSV if needed\n",
-    "#vic_df.to_csv('predicted_income_till_2030.csv', index=False)\n"
+    "vic_df.to_csv('predicted_income_till_2030.csv', index=False)\n"
    ]
   }
  ],
