added modeling comments

--- a/Amanda-workspace/Modeling_Cross_Section.ipynb
+++ b/Amanda-workspace/Modeling_Cross_Section.ipynb
@@ -5,7 +5,7 @@
    "id": "02433780",
    "metadata": {},
    "source": [
-    "# This notebook is trying to find the suburb with the highest growth with cross section (Not linearity)"
+    "# This notebook is trying to find the suburb with the highest growth using FOI COUNTS AS WELL"
    ]
   },
   {
