added final models

--- a/Amanda-workspace/Combining_linearreg.ipynb
+++ b/Amanda-workspace/Combining_linearreg.ipynb
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1287909/636035063.py:2: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_2071197/636035063.py:2: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  properties_df = pd.read_csv('/home/eeamanda/project-2-group-real-estate-industry-project-7-2025/datasets/all_properties_tidy_enriched.csv')\n"
      ]
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "452e09c3",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
        "[1401 rows x 12 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "38a8d45b",
    "metadata": {},
    "outputs": [],
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "8533c2fd",
    "metadata": {},
    "outputs": [],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "a6bd6542",
    "metadata": {},
    "outputs": [],
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "cb3f9adb",
    "metadata": {},
    "outputs": [],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "a903c724",
    "metadata": {},
    "outputs": [
@@ -740,7 +740,7 @@
        "[14739 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "ef1c5c70",
    "metadata": {},
    "outputs": [],
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "847c498d",
    "metadata": {},
    "outputs": [
@@ -945,7 +945,7 @@
        "[4818 rows x 7 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "id": "9ceed733",
    "metadata": {},
    "outputs": [],
@@ -988,10 +988,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "id": "7ca19029",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2071197/455467117.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  properties_df['date'] = pd.to_datetime(properties_df['date'])\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1098,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e6781d56",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1184,7 @@
        "4  Albert Park-Middle Park-West St Kilda 2026-06-01        633.900624"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "id": "a60b7fe0",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "2d34e392",
    "metadata": {},
    "outputs": [
@@ -1673,7 +1685,7 @@
        "[530 rows x 23 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1685,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "a18cf81a",
    "metadata": {},
    "outputs": [],
@@ -1757,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "c065cdf2",
    "metadata": {},
    "outputs": [
@@ -1961,7 +1973,7 @@
        "[4818 rows x 9 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1980,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "bbb01ad3",
    "metadata": {},
    "outputs": [],
@@ -1992,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "b80fcefc",
    "metadata": {},
    "outputs": [
@@ -2379,7 +2391,7 @@
        "[522 rows x 27 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2398,7 +2410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "563bd050",
    "metadata": {},
    "outputs": [],
@@ -2479,7 +2491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "0a6d2491",
    "metadata": {},
    "outputs": [
@@ -2708,7 +2720,7 @@
        "[4818 rows x 10 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2735,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "980f94ff",
    "metadata": {},
    "outputs": [
@@ -2743,7 +2755,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1287909/475246119.py:17: FutureWarning: The behavior of 'isin' with dtype=datetime64[ns] and castable values (e.g. strings) is deprecated. In a future version, these will not be considered matching by isin. Explicitly cast to the appropriate dtype before calling isin instead.\n",
+      "/tmp/ipykernel_2071197/475246119.py:17: FutureWarning: The behavior of 'isin' with dtype=datetime64[ns] and castable values (e.g. strings) is deprecated. In a future version, these will not be considered matching by isin. Explicitly cast to the appropriate dtype before calling isin instead.\n",
       "  test_mask = df['date'].isin(['2024-12-01', '2025-03-01'])\n"
      ]
     },
@@ -2850,7 +2862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "46e1d0a9",
    "metadata": {},
    "outputs": [
@@ -2945,7 +2957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "e373f721",
    "metadata": {},
    "outputs": [],
@@ -2956,7 +2968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "id": "597c5a93",
    "metadata": {},
    "outputs": [],
@@ -2967,7 +2979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "id": "1a4e6a85",
    "metadata": {},
    "outputs": [
