--- a/Tas-workspace/notebooks/data_preprocessing1.ipynb
+++ b/Tas-workspace/notebooks/data_preprocessing1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 670,
+   "execution_count": 2,
    "id": "010f5ce3",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 4,
    "id": "8917cf2c",
    "metadata": {},
    "outputs": [
@@ -290,19 +290,19 @@
        "[5 rows x 66 columns]"
       ]
      },
-     "execution_count": 601,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gdf = gpd.read_file(\"../datasets/population_data/32180_ERP_2024_SA2_GDA2020.gpkg\")\n",
+    "gdf = gpd.read_file(\"../../datasets/population_data/32180_ERP_2024_SA2_GDA2020.gpkg\")\n",
     "gdf.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 5,
    "id": "ea69662d",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "       'Australian Capital Territory', 'Other Territories'], dtype=object)"
       ]
      },
-     "execution_count": 602,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 6,
    "id": "a59845b2",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
        "[5 rows x 66 columns]"
       ]
      },
-     "execution_count": 603,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 7,
    "id": "a346c476",
    "metadata": {},
    "outputs": [
@@ -844,7 +844,7 @@
        "[5 rows x 44 columns]"
       ]
      },
-     "execution_count": 604,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 8,
    "id": "ebc586c5",
    "metadata": {},
    "outputs": [
@@ -1279,7 +1279,7 @@
        "[522 rows x 44 columns]"
       ]
      },
-     "execution_count": 605,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 9,
    "id": "49dbdcf8",
    "metadata": {},
    "outputs": [
@@ -4735,6 +4735,28 @@
     "# Save GeoPackage with geometry\n",
     "if \"geometry\" in combined_df.columns:\n",
     "    combined_df.to_file(\"../datasets/raw/curated/population_data.gpkg\", layer=\"combined\", driver=\"GPKG\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "08a7cb30",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'combined_nogeo' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcombined_nogeo\u001b[49m.shape\n",
+      "\u001b[31mNameError\u001b[39m: name 'combined_nogeo' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "combined_nogeo.shape"
    ]
   },
   {
