Save local updates before rebase

--- a/ariqasri-workspace/notebooks/demographics.ipynb
+++ b/ariqasri-workspace/notebooks/demographics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "3f93c064",
    "metadata": {},
    "outputs": [
@@ -18,10 +18,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/09/nwdnh9n512dflz62l4kfx0_r0000gn/T/ipykernel_42229/2737538597.py:12: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "/var/folders/09/nwdnh9n512dflz62l4kfx0_r0000gn/T/ipykernel_55784/3846310244.py:12: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
       "\n",
       "  vic[\"Lat\"] = vic.geometry.centroid.y\n",
-      "/var/folders/09/nwdnh9n512dflz62l4kfx0_r0000gn/T/ipykernel_42229/2737538597.py:13: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "/var/folders/09/nwdnh9n512dflz62l4kfx0_r0000gn/T/ipykernel_55784/3846310244.py:13: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
       "\n",
       "  vic[\"Lng\"] = vic.geometry.centroid.x\n"
      ]
@@ -32,7 +32,7 @@
     "import pandas as pd\n",
     "\n",
     "# 1. Load SA2 shapefile\n",
-    "shapefile = \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/ariqasri-workspace/dataset/SA2_GDA2020_SHAPEFILE/SA2_2021_AUST_GDA2020.shp\"\n",
+    "shapefile = \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/SA2_GDA2020_SHAPEFILE/SA2_2021_AUST_GDA2020.shp\"\n",
     "gdf = gpd.read_file(shapefile)\n",
     "\n",
     "# 2. Filter Victoria (STE_CODE21 = \"2\")\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a6e8339a",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Saved: /Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/ariqasri-workspace/dataset/raw/mapped_target_suburbs.csv\n"
+      "Saved: /Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/raw/mapped_target_suburbs.csv\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
     "from rapidfuzz import process, fuzz\n",
     "\n",
     "# Load cluster centroids\n",
-    "vic = pd.read_csv(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/ariqasri-workspace/dataset/raw/vic_clusters_centroids.csv\") \n",
+    "vic = pd.read_csv(\"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/raw/vic_clusters_centroids.csv\") \n",
     "\n",
     "# cleaning\n",
     "DIRECTIONALS = {\"north\", \"south\", \"east\", \"west\", \"upper\", \"lower\", \"central\", \"inner\", \"outer\"}\n",
@@ -315,13 +315,13 @@
     "\n",
     "\n",
     "sa2 = gpd.read_file(\n",
-    "    \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/ariqasri-workspace/dataset/landing/SA2_GDA2020_SHAPEFILE/SA2_2021_AUST_GDA2020.shp\"\n",
+    "    \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/SA2_GDA2020_SHAPEFILE/SA2_2021_AUST_GDA2020.shp\"\n",
     ")\n",
     "sa2_vic = sa2[sa2[\"STE_CODE21\"] == \"2\"].copy().to_crs(\"EPSG:4283\")\n",
     "\n",
     "# load lga\n",
     "lga = gpd.read_file(\n",
-    "    \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/ariqasri-workspace/dataset/landing/LGA_2021_AUST_GDA2020_SHP/LGA_2021_AUST_GDA2020.shp\"\n",
+    "    \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/landing/LGA_2021_AUST_GDA2020_SHP/LGA_2021_AUST_GDA2020.shp\"\n",
     ")\n",
     "lga_vic = lga[lga[\"STE_CODE21\"] == \"2\"].copy().to_crs(\"EPSG:4283\")\n",
     "\n",
@@ -352,136 +352,11 @@
     "mapped_with_both = mapped_with_both.drop(columns=[\"index_right\"])\n",
     "\n",
     "# save output\n",
-    "output_path = \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/ariqasri-workspace/dataset/raw/mapped_target_suburbs.csv\"\n",
+    "output_path = \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/datasets/raw/mapped_target_suburbs.csv\"\n",
     "mapped_with_both.drop(columns=\"geometry\").to_csv(output_path, index=False)\n",
     "\n",
     "\n",
     "print(\"Saved:\", output_path)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "150369ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Saved results to: /Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/ariqasri-workspace/dataset/raw/demographics_dataset.csv\n",
-      "                           Target_Suburb                      Matched_Cluster  \\\n",
-      "0  Albert Park-Middle Park-West St Kilda         Albert Park; St Kilda - West   \n",
-      "1                               Armadale                             Armadale   \n",
-      "2                          Carlton North                              Carlton   \n",
-      "3                      Carlton-Parkville                   Carlton; Parkville   \n",
-      "4                        CBD-St Kilda Rd  Melbourne CBD - East; St Kilda East   \n",
-      "\n",
-      "         Lat         Lng   SA2_CODE21  earning_over_2000_per_week  \\\n",
-      "0 -37.853484  144.970161  206051128.0                         8.0   \n",
-      "1 -37.856747  145.020711  206061135.0                        26.0   \n",
-      "2 -37.800500  144.967804  206041117.0                        15.0   \n",
-      "3 -37.793796  144.959672  206041124.0                        15.0   \n",
-      "4 -37.839927  144.983391  206041125.0                        14.5   \n",
-      "\n",
-      "   earning_under_1000_per_week  average_income  mortgage_repayments  \\\n",
-      "0                         38.0           858.0               1842.0   \n",
-      "1                         27.0          1378.0               3000.0   \n",
-      "2                         32.0          1126.0                750.0   \n",
-      "3                         32.0          1126.0                750.0   \n",
-      "4                         35.0           991.0               2525.0   \n",
-      "\n",
-      "   tenant_rate  \n",
-      "0         75.0  \n",
-      "1         32.0  \n",
-      "2         69.0  \n",
-      "3         69.0  \n",
-      "4         54.5  \n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import requests\n",
-    "import time\n",
-    "import numpy as np\n",
-    "\n",
-    "# load datasets\n",
-    "df = pd.read_csv(\n",
-    "    \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/ariqasri-workspace/dataset/raw/mapped_target_suburbs.csv\"\n",
-    ")\n",
-    "\n",
-    "# filters valid lat and lng data\n",
-    "valid_suburbs = df[df[\"Lat\"].notnull()].copy()\n",
-    "\n",
-    "# load vic clusters\n",
-    "vic = pd.read_csv(\n",
-    "    \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/ariqasri-workspace/dataset/raw/vic_clusters_centroids.csv\"\n",
-    ")\n",
-    "\n",
-    "# microburbs scraping\n",
-    "def get_microburbs_stat(lat, lng, stat_name):\n",
-    "    url = f\"https://www.microburbs.com.au/heat-map-value?stat_name={stat_name}&lat={lat}&lng={lng}\"\n",
-    "    resp = requests.get(url)\n",
-    "    if resp.status_code == 200:\n",
-    "        text = resp.text.strip()\n",
-    "        try:\n",
-    "            if \"%\" in text:\n",
-    "                val = float(text.split(\"%\")[0].strip())\n",
-    "            elif \"$\" in text:  # e.g. \"$2000 per month\"\n",
-    "                val = float(text.replace(\"$\", \"\").replace(\",\", \"\").split(\" \")[0])\n",
-    "            else:\n",
-    "                val = float(text.split(\" \")[0])\n",
-    "            return np.nan if val == 0.0 else val\n",
-    "        except Exception:\n",
-    "            return np.nan\n",
-    "    return np.nan\n",
-    "\n",
-    "# get stats for target variable\n",
-    "def get_stats_for_target(target, clusters, metrics):\n",
-    "    results = {m: [] for m in metrics}\n",
-    "    for comp in clusters.split(\";\"):\n",
-    "        comp = comp.strip()\n",
-    "        row = vic[vic[\"Cluster\"] == comp]\n",
-    "        if not row.empty:\n",
-    "            lat, lng = row.iloc[0][\"Lat\"], row.iloc[0][\"Lng\"]\n",
-    "            for m in metrics:\n",
-    "                val = get_microburbs_stat(lat, lng, m)\n",
-    "                if pd.notnull(val):\n",
-    "                    results[m].append(val)\n",
-    "            time.sleep(0.5)  \n",
-    "    return {m: np.nanmean(results[m]) if results[m] else np.nan for m in metrics}\n",
-    "\n",
-    "# features\n",
-    "metrics = [\n",
-    "    \"earning_over_2000_per_week\",\n",
-    "    \"earning_under_1000_per_week\",\n",
-    "    \"average_income\",\n",
-    "    \"mortgage_repayments\",\n",
-    "    \"tenant_rate\"\n",
-    "]\n",
-    "\n",
-    "# data\n",
-    "rows = []\n",
-    "for _, row in valid_suburbs.iterrows():\n",
-    "    clusters = row[\"Matched_Cluster\"]\n",
-    "    stats = get_stats_for_target(row[\"Target_Suburb\"], clusters, metrics)\n",
-    "    \n",
-    "    rows.append({\n",
-    "        \"Target_Suburb\": row[\"Target_Suburb\"],\n",
-    "        \"Matched_Cluster\": row[\"Matched_Cluster\"],\n",
-    "        \"Lat\": row[\"Lat\"],\n",
-    "        \"Lng\": row[\"Lng\"],\n",
-    "        \"SA2_CODE21\": row[\"SA2_CODE21\"],   \n",
-    "        **stats   \n",
-    "    })\n",
-    "\n",
-    "# save output\n",
-    "final_df = pd.DataFrame(rows)\n",
-    "output_path = \"/Users/ariqasri/Desktop/project-2-group-real-estate-industry-project-7-2025/ariqasri-workspace/dataset/raw/demographics_dataset.csv\"\n",
-    "final_df.to_csv(output_path, index=False)\n",
-    "\n",
-    "print(\"Saved results to:\", output_path)\n"
    ]
   }
  ],
