--- a/Amanda-workspace/Combining_linearreg.ipynb
+++ b/Amanda-workspace/Combining_linearreg.ipynb
@@ -13792,7 +13792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": null,
    "id": "53c83f2d",
    "metadata": {},
    "outputs": [
@@ -13832,6 +13832,7 @@
     "    plt.show()\n",
     "\n",
     "plot_arima_predictions(preds_df, \"Altona\")\n",
+    "#commment\n",
     "\n"
    ]
   }
