Finalising comments on dist nb

--- a/Amanda-workspace/Calculating_dist.ipynb
+++ b/Amanda-workspace/Calculating_dist.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8d56d12c",
+   "metadata": {},
+   "source": [
+    "# This notebook uses Open Route Service to calculate the distance of each Domain properties to FOI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4ee97fd6",
    "metadata": {},
    "source": [
@@ -10,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3fc28526",
    "metadata": {},
    "outputs": [],
@@ -20,6 +28,14 @@
     "import folium\n",
     "from folium.plugins import MarkerCluster\n",
     "import pandas as pd\n",
+    "from shapely.geometry import Point\n",
+    "import openrouteservice\n",
+    "import os\n",
+    "import time\n",
+    "import numpy as np\n",
+    "import geopandas as gpd\n",
+    "import openrouteservice as ors\n",
+    "from openrouteservice.exceptions import ApiError\n",
     "DATA =  Path(\"..\") / \"datasets\" / \"VMFEAT\"# adjust if needed"
    ]
   },
@@ -43,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "21f4077d",
    "metadata": {},
    "outputs": [],
@@ -57,7 +73,6 @@
     "    \"VMADD_PFI\", \"VICNAMESID\" ,\"THEME1\",\"THEME2\",\n",
     "    \"FEATSTATUS\" \n",
     "]\n",
-    "\n",
     "foi_points_clean = foi_points.drop(columns=[c for c in cols_to_drop if c in foi_points.columns])\n",
     "foi_points_clean = foi_points_clean[foi_points_clean[\"STATE\"].str.upper() == \"VIC\"].copy()"
    ]
@@ -130,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "eb30a696",
    "metadata": {},
    "outputs": [],
@@ -144,7 +159,6 @@
     "foi_gdf = foi_gdf.to_crs(epsg=3857)\n",
     "\n",
     "#Group the categories so that we can find the nearest distance\n",
-    "#  school, hospital,entertainment, grocery stor, melbourne cbd/ melb central\n",
     "education =['primary school', 'secondary school', 'primary/secondary school','university']\n",
     "\n",
     "health = ['maternal/child health centre', 'community health centre', 'day procedure centre', 'disability support centre',\n",
@@ -180,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3c39a140",
    "metadata": {},
    "outputs": [],
@@ -190,7 +204,7 @@
     "domain_gdf = gpd.GeoDataFrame(\n",
     "    domain_df,\n",
     "    geometry=gpd.points_from_xy(domain_df.lon, domain_df.lat),\n",
-    "    crs=\"EPSG:4326\"  # WGS84 (lat/lon)\n",
+    "    crs=\"EPSG:4326\" \n",
     ")\n"
    ]
   },
@@ -209,11 +223,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shapely.geometry import Point\n",
-    "import openrouteservice\n",
-    "import numpy as np\n",
-    "import time\n",
-    "\n",
     "# ORS client\n",
     "client = openrouteservice.Client(key=\"\") #Enter key in the \"\""
    ]
@@ -240,18 +249,16 @@
     "import openrouteservice as ors\n",
     "from openrouteservice.exceptions import ApiError\n",
     "\n",
-    "# =========================\n",
+    "\n",
     "# CONFIG\n",
-    "# =========================\n",
+    "\n",
     "WANTED_CATS = [\"education\", \"health\"]\n",
     "K_NEAREST = 3\n",
     "ORS_ELEMENTS_LIMIT = 3500          # sources × destinations per Matrix call\n",
     "BATCH_DELAY = 2                    # polite delay between API calls (seconds)\n",
     "OUTPUT_CSV = \"nearest_drive_metrics2.csv\"\n",
     "\n",
-    "# =========================\n",
-    "# UTILITIES\n",
-    "# =========================\n",
+    "\n",
     "def haversine_vec(orig_lons, orig_lats, dest_lons, dest_lats):\n",
     "    \"\"\"Return matrix of Haversine distances in meters, shape (n_origins, n_destinations).\"\"\"\n",
     "    R = 6371000.0\n",
@@ -304,9 +311,7 @@
     "    for i in range(start, len(gdf), chunk_size):\n",
     "        yield gdf.iloc[i:i+chunk_size].copy()\n",
     "\n",
-    "# =========================\n",
-    "# CORE\n",
-    "# =========================\n",
+    "\n",
     "def compute_nearest_drive_metrics_chunked(\n",
     "    domain_gdf: gpd.GeoDataFrame,\n",
     "    foi_gdf: gpd.GeoDataFrame,\n",
@@ -323,7 +328,7 @@
     "      - store min driving distance (meters) and time (minutes):\n",
     "        nearest_{cat}_dist_m, nearest_{cat}_time_mins\n",
     "    \"\"\"\n",
-    "    # Ensure WGS84 & lon/lat columns\n",
+    "    # Ensure the lat and long column are in the same format\n",
     "    domain = domain_gdf.to_crs(epsg=4326).copy()\n",
     "    foi = foi_gdf.to_crs(epsg=4326).copy()\n",
     "    foi = foi[foi[\"group\"].isin(WANTED_CATS)].copy()\n",
@@ -361,7 +366,7 @@
     "                chunk[f\"nearest_{cat}_time_mins\"] = np.full(n_o, np.nan)\n",
     "                continue\n",
     "\n",
-    "            # 1) Top-K by Haversine per origin (optionally within radius)\n",
+    "            # Top-K by Haversine per origin\n",
     "            dmat = haversine_vec(o_lon, o_lat, dest_lon, dest_lat)  # meters\n",
     "            if limit_radius_m is not None:\n",
     "                dmask = dmat.copy()\n",
@@ -379,7 +384,7 @@
     "                cands = [idx for idx in topk_sorted[r].tolist() if np.isfinite(dmask[r, idx])]\n",
     "                cand_sets.append(set(cands))\n",
     "\n",
-    "            # 2) Deduplicate candidate destinations across the chunk\n",
+    "            # Deduplicate candidate destinations across the chunk\n",
     "            dest_unique = sorted(set().union(*cand_sets))\n",
     "            if len(dest_unique) == 0:\n",
     "                chunk[f\"nearest_{cat}_dist_m\"] = np.full(n_o, np.nan)\n",
@@ -389,7 +394,7 @@
     "            dest_pos = {d: j for j, d in enumerate(dest_unique)}\n",
     "            dest_list = [(float(dest_lon[d]), float(dest_lat[d])) for d in dest_unique]\n",
     "\n",
-    "            # 3) Matrix calls in element-safe batches\n",
+    "            # Matrix calls in element-safe batches\n",
     "            n_d = len(dest_list)\n",
     "            sources_per_call = max(1, ORS_ELEMENTS_LIMIT // n_d)\n",
     "\n",
@@ -430,18 +435,18 @@
     "                time.sleep(BATCH_DELAY)\n",
     "                start_idx = end_idx\n",
     "\n",
-    "            # 4) Write category result for this chunk\n",
+    "            # Write category result for this chunk\n",
     "            chunk[f\"nearest_{cat}_dist_m\"] = best_dist\n",
     "            chunk[f\"nearest_{cat}_time_mins\"] = (best_time_s / 60.0)  # seconds -> minutes\n",
     "\n",
     "        # Append chunk to CSV\n",
     "        chunk.to_csv(output_csv, index=False, mode=\"a\", header=(ch_i == 0))\n",
-    "        print(f\"✅ Saved chunk {ch_i+1} -> {output_csv}\")\n"
+    "        print(f\"Saved chunk {ch_i+1} -> {output_csv}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "b9af386a",
    "metadata": {},
    "outputs": [
@@ -939,9 +944,9 @@
     "    domain_gdf=domain_gdf,\n",
     "    foi_gdf=foi_gdf,\n",
     "    output_csv=\"nearest_drive_metrics2.csv\",\n",
-    "    chunk_size=30,          # adjust to fit quota/limits\n",
-    "    start_row=7470,            # e.g. resume from 0\n",
-    "    limit_radius_m=15000    # optional cap (15 km straight-line for candidates)\n",
+    "    chunk_size=30,          # Depending on our quota\n",
+    "    start_row=7470,            #  resume from 0\n",
+    "    limit_radius_m=15000    # How far do we want to cap\n",
     ")"
    ]
   },
@@ -967,17 +972,12 @@
     "import openrouteservice as ors\n",
     "from openrouteservice.exceptions import ApiError\n",
     "\n",
-    "# =========================\n",
-    "# CONFIG\n",
-    "# =========================\n",
-    "CBD_COORD = (144.9671, -37.8183)   # Melbourne CBD (lon, lat)\n",
+    "\n",
+    "CBD_COORD = (144.9671, -37.8183)   # Melbourne CBD (lon, lat) using FLINDERS STATION coord\n",
     "ORS_ELEMENTS_LIMIT = 3500\n",
     "BATCH_DELAY = 2\n",
     "OUTPUT_CSV = \"domain_to_cbd.csv\"\n",
     "\n",
-    "# =========================\n",
-    "# UTILITIES\n",
-    "# =========================\n",
     "def wait_until_matrix_metrics(origins, destinations):\n",
     "    \"\"\"\n",
     "    Call ORS Matrix for driving distance (meters) and duration (seconds).\n",
@@ -999,16 +999,16 @@
     "        except ApiError as e:\n",
     "            msg = str(e)\n",
     "            if \"Quota exceeded\" in msg or \"403\" in msg:\n",
-    "                print(\"⚠️ ORS daily quota exceeded. Waiting 1 hour...\")\n",
+    "                print(\"ORS daily quota exceeded. Waiting 1 hour...\")\n",
     "                time.sleep(60 * 60)\n",
     "            elif \"429\" in msg or \"Rate limit\" in msg:\n",
-    "                print(\"⚠️ ORS rate limit hit. Waiting 10s...\")\n",
+    "                print(\"ORS rate limit hit. Waiting 10s...\")\n",
     "                time.sleep(10)\n",
     "            else:\n",
-    "                print(f\"⚠️ ORS error: {msg}. Retrying in 5s...\")\n",
+    "                print(f\"ORS error: {msg}. Retrying in 5s...\")\n",
     "                time.sleep(5)\n",
     "        except Exception as e:\n",
-    "            print(f\"⚠️ Unexpected error: {e}. Waiting 10s...\")\n",
+    "            print(f\"Unexpected error: {e}. Waiting 10s...\")\n",
     "            time.sleep(10)\n",
     "\n",
     "def split_gdf(gdf, chunk_size=30, start=0):\n",
@@ -1016,9 +1016,6 @@
     "    for i in range(start, len(gdf), chunk_size):\n",
     "        yield gdf.iloc[i:i+chunk_size].copy()\n",
     "\n",
-    "# =========================\n",
-    "# CORE\n",
-    "# =========================\n",
     "def compute_domain_to_cbd(\n",
     "    domain_gdf: gpd.GeoDataFrame,\n",
     "    output_csv: str = OUTPUT_CSV,\n",
@@ -1071,12 +1068,12 @@
     "\n",
     "        # Append to CSV\n",
     "        chunk.to_csv(output_csv, index=False, mode=\"a\", header=(ch_i == 0))\n",
-    "        print(f\"✅ Saved chunk {ch_i+1} -> {output_csv}\")\n"
+    "        print(f\"Saved chunk {ch_i+1} -> {output_csv}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "dbdd746c",
    "metadata": {},
    "outputs": [
@@ -2102,14 +2099,14 @@
     }
    ],
    "source": [
-    "# Example usage\n",
+    "#Calling the function\n",
     "\n",
     "compute_domain_to_cbd(\n",
     "    domain_gdf=domain_gdf,\n",
     "    output_csv=\"domain_to_cbd.csv\",\n",
     "    chunk_size=30,\n",
     "    start_row=0\n",
-    ")\n"
+    ")"
    ]
   }
  ],
